circle alignment fix?

--- a/src/app/map-tool/map/map-legend/ui-map-legend.component.scss
+++ b/src/app/map-tool/map/map-legend/ui-map-legend.component.scss
@@ -33,6 +33,11 @@
 }
 
 // bubbles
+.legend-circle {
+  position:absolute;
+  top:0;right:0;bottom:0;left:0;
+  margin:auto;
+}
 .small-bubble {
   font-weight: 500;
   .legend-circle {
